--- a/src/Pages/DangPhatHanh/index.css
+++ b/src/Pages/DangPhatHanh/index.css
@@ -2,4 +2,15 @@
     font-size: 30px;
     color: black;
   }
-  
+/* CSS file */
+.pagination-small {
+  font-size: 1rem;
+  /* default size */
+}
+
+/* Smaller size for screens less than 600px wide */
+@media (max-width: 600px) {
+  .pagination-small {
+    font-size: 0.75rem;
+  }
+}
