--- a/src/index.css
+++ b/src/index.css
@@ -22,4 +22,15 @@
     scale: 2;
   }
   
-  
+  /* CSS file */
+.pagination-small {
+  font-size: 1rem; /* default size */
+  color: red I !important;
+}
+
+/* Smaller size for screens less than 600px wide */
+@media (max-width: 600px) {
+  .pagination-small {
+    font-size: 0.75rem;
+  }
+}
