--- a/src/index.css
+++ b/src/index.css
@@ -25,9 +25,24 @@
   /* CSS file */
 .pagination-small {
   font-size: 1rem; /* default size */
-  color: red I !important;
+  color: red  !important;
 }
-
+.lg .MuiPaginationItem-text {
+  font-size: 1rem !important;
+  line-height: 1.5rem !important;
+}
+.MuiPaginationItem-text {
+  font-size: 0.875rem !important;
+  line-height: 1.25rem !important;
+}
+.dark .css-1pi9rcw-MuiButtonBase-root-MuiPaginationItem-root.Mui-selected {
+    color: #fff;
+    background-color: #1976d2 !important;
+}
+.css-1pi9rcw-MuiButtonBase-root-MuiPaginationItem-root.Mui-selected {
+  color: #fff;
+  background-color: #f97316 !important;
+}
 /* Smaller size for screens less than 600px wide */
 @media (max-width: 600px) {
   .pagination-small {
