fix layout v2 update v3.2

--- a/src/index.css
+++ b/src/index.css
@@ -35,11 +35,11 @@
   font-size: 0.875rem !important;
   line-height: 1.25rem !important;
 }
-.dark .css-1pi9rcw-MuiButtonBase-root-MuiPaginationItem-root.Mui-selected {
+.dark .css-41sz0k.Mui-selected {
     color: #fff;
     background-color: #1976d2 !important;
 }
-.css-1pi9rcw-MuiButtonBase-root-MuiPaginationItem-root.Mui-selected {
+.css-41sz0k.Mui-selected {
   color: #fff;
   background-color: #f97316 !important;
 }
