--- a/src/Pages/Home/index.css
+++ b/src/Pages/Home/index.css
@@ -14,6 +14,7 @@
     border: 1px solid #000;
     width: 20px;
     height: 10px;
+    border-radius: 25%;
     /* Change border color as needed */
 }
 .p-carousel-indicator.p-highlight {
@@ -22,6 +23,7 @@
     border: 1px solid #000;
     width: 20px;
     height: 10px;
+   
     /* Change border color as needed */
 }
 .dark .p-carousel-indicator {
