css the paginition

--- a/src/Pages/MangaList/index.css
+++ b/src/Pages/MangaList/index.css
@@ -23,6 +23,14 @@
         line-height: 2rem !important;
     }
 }
+.css-1pi9rcw-MuiButtonBase-root-MuiPaginationItem-root {
+    border: 1px solid black !important;
+   
+}
+.dark .css-1pi9rcw-MuiButtonBase-root-MuiPaginationItem-root {
+    border: 1px solid #fff !important;
+    /* white border for dark mode */
+}
 
 /* Light mode styles */
 .css-1pi9rcw-MuiButtonBase-root-MuiPaginationItem-root.Mui-selected {
@@ -30,7 +38,12 @@
     background-color: #f97316 !important;
     /* orange for selected item */
 }
+.dark .css-1pi9rcw-MuiButtonBase-root-MuiPaginationItem-root.Mui-selected {
+    color: #fff !important;
+    border: 2px solid #1976d2 !important;
 
+    /* blue for selected item */
+}
 .pagination-icon-bg {
     background-color: #f97316 !important;
     /* blue for icons */
@@ -38,12 +51,7 @@
 }
 
 /* Dark mode styles */
-.dark .css-1pi9rcw-MuiButtonBase-root-MuiPaginationItem-root.Mui-selected {
-    color: #fff !important;
-    border: 2px solid #1976d2 !important;
-  
-    /* blue for selected item */
-}
+
 
 .dark .pagination-icon-bg {
     background-color: #1976d2 !important;
